Cycles volume rendering is too dark #41473

Closed
opened 2014-08-18 12:33:38 +02:00 by David M · 11 comments

System Information
Windows 7 x64
Geforce GTX 780

Blender Version
Broken: 2.71.4 7c9b8aa buildbot
Worked: 2.71 release

Short description of error
A dense white scattering material is expected to reflect almost all light, but appears
very dark in recent buildbot builds. The results of the 2.71 release seem much
closer to the expected result.

Exact steps for others to reproduce the error
Open the attached blend in a recent build, hit render.

**System Information** Windows 7 x64 Geforce GTX 780 **Blender Version** Broken: 2.71.4 7c9b8aa buildbot Worked: 2.71 release **Short description of error** A dense white scattering material is expected to reflect almost all light, but appears very dark in recent buildbot builds. The results of the 2.71 release seem much closer to the expected result. **Exact steps for others to reproduce the error** Open the attached blend in a recent build, hit render.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @erwin94

Added subscriber: @erwin94
Author

Attached file: volume_cycles_test.blend

Attached file: [volume_cycles_test.blend](https://archive.blender.org/developer/F104813/volume_cycles_test.blend)
Author

Okay, I was a little bit too quick with reporting this...

The results are the same for both versions, if I manually set the volume light path bounces
to the same value. The question then is, why does it load the file with a bounce value of 0
in 2.71.4 and 1 for 2.71?

Okay, I was a little bit too quick with reporting this... The results are the same for both versions, if I manually set the volume light path bounces to the same value. The question then is, why does it load the file with a bounce value of 0 in 2.71.4 and 1 for 2.71?
Sergey Sharybin self-assigned this 2014-08-18 13:42:01 +02:00

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

The default value for the bounce changed by @ThomasDinges, but i wouldn't expect the existing files to be changed.

Will check on making existing files to not change the final render result.

The default value for the bounce changed by @ThomasDinges, but i wouldn't expect the existing files to be changed. Will check on making existing files to not change the final render result.

This is a limitation of Python properties as far as I know. The default was "1", if you never changed that yourself, it won't be saved into the blend file. So now it takes the new default which is 0. We had the same issue between 2.69 and 2.70, when we changed default bounces. See http://wiki.blender.org/index.php/Dev:Ref/Release_Notes/2.70/Cycles "Backward compatibility breakage"

This is a limitation of Python properties as far as I know. The default was "1", if you never changed that yourself, it won't be saved into the blend file. So now it takes the new default which is 0. We had the same issue between 2.69 and 2.70, when we changed default bounces. See http://wiki.blender.org/index.php/Dev:Ref/Release_Notes/2.70/Cycles "Backward compatibility breakage"
Author

Ah, okay. If fixing this is difficult I'm fine with closing this bug.
For any somewhat complex volumetric rendering scene I expect that value
has been touched, and I only found this in a simple test scene.

So I think accepting this breakage might be okay, but should
have a note in the release notes again.

Ah, okay. If fixing this is difficult I'm fine with closing this bug. For any somewhat complex volumetric rendering scene I expect that value has been touched, and I only found this in a simple test scene. So I think accepting this breakage might be okay, but should have a note in the release notes again.

This issue was referenced by 21a7433faa

This issue was referenced by 21a7433faafed266b48601d44d6aaf80ea66450b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 21a7433faa.

Closed by commit 21a7433faa.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41473
No description provided.